<resources>
    <string name="app_name">Retrofit with Kotlin Coroutine in Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check">check</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="TOC"><![CDATA[T&C]]></string>
    <string name="promocode">PromoCode</string>
</resources>